# Ark_imav23

./: README.md
PickCraft1/SolidWorks File/: Assem1.SLDASM
imav_2023/: CMakeLists.txt  package.xml
imav_2023/building/Corridor/: model.config  model.sdf
imav_2023/building/Imav_new_world/: model.config  model.sdf
imav_2023/building/Imav_outer_structure/: model.sdf
imav_2023/imav_plugins/: CMakeLists.txt  package.xml
imav_2023/imav_plugins/src/: CMakeLists.txt  rotation_controller.cpp
imav_2023/meshes/: Curved_rope.blend  Curved_rope.blend1
imav_2023/models/Curved_rope_left/: model.config  model.sdf
imav_2023/models/Curved_rope_right/: model.config  model.sdf
imav_2023/models/Moving_window/: model.config  model.sdf
imav_2023/models/Obstruction/: model.config  model.sdf
imav_2023/models/Rope_middle/: model.config  model.sdf
imav_2023/models/Rotating_plate_with_qr/: model.config  model.sdf
imav_2023/models/Rotating_platform/: model.config  model.sdf
imav_2023/models/Rotating_platform/meshes/: rotating_top.stl
imav_2023/models/Window/: model.config  model.sdf
imav_2023/models/Window/meshes/: window.stl
imav_2023/models/qr_plate/: model.config  model.sdf
imav_2023/models/qr_plate_rotating/: model.config  model.sdf
imav_2023/worlds/: imav_2023_world  trial
imav_gazebo/: CMakeLists.txt  package.xml
imav_gazebo/launch/: imav_world.launch  rotors_run.launch
imav_gazebo/models/block/: model.sdf
imav_gazebo/models/curved_rope_left/: model.sdf
imav_gazebo/models/curved_rope_right/: model.config
imav_gazebo/models/drop_zone_aruco/: model.config  model.sdf
imav_gazebo/models/moving_window/: model.config  model.sdf
imav_gazebo/models/qr_plate_obstructed/: model.config  model.sdf
imav_gazebo/models/qr_plate_obstructed_top/: model.config  model.sdf
imav_gazebo/models/qr_plate_unobstructed/: model.config  model.sdf
imav_gazebo/models/rotating_plate_with_qr/: model.config  model.sdf
imav_gazebo/models/start_zone_aruco/: model.config  model.sdf
imav_gazebo/models/straight_rope_middle/: model.config  model.sdf
imav_gazebo/models/transit_zone_aruco/: model.config  model.sdf
imav_gazebo/worlds/: imav_world.world
ros_imav_2023/: CMakeLists.txt  package.xml
ros_imav_2023/launch/: imav_world.launch
ros_imav_2023/models/curved_rope_left/meshes/: rope_curved.stl
ros_imav_2023/models/curved_rope_right/: model.sdf
ros_imav_2023/models/imav_outer_structure/: model.config  model.sdf
ros_imav_2023/models/obstruction/: model.config
ros_imav_2023/models/rotating_plate_with_qr/: model.sdf
ros_imav_2023/models/rotating_plate_with_qr/materials/scripts/: marker.material
rotor_s/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
rotor_s/devel/lib/: libdynamicedt3d.so.1.9.8  liboctomap.so.1.9.8  liboctomath.so.1.9.8  liboctovis.so.1.9.8
rotor_s/logs/octovis/: build.cmake.000.log.stderr
rotor_s/logs/rotors_control/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.make.001.log.stderr  build.make.009.log.stderr  build.make.017.log.stderr  build.make.021.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.028.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr
rotor_s/logs/rotors_gazebo_plugins/: build.check.017.log.stderr  build.cmake.000.log.stderr
simulator2/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
simulator2/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
simulator2/src/Worlds/: rotating_platform.world
simulator2/src/atomic_configure/: _setup_util.py
simulator2/src/catkin_generated/: generate_cached_setup.py  package.cmake
simulator2/src/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
simulator2/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
simulator2/src/simulator_plugins/: CMakeLists.txt  package.xml
src/: .gitmodules
src/imav_gazebo/: CMakeLists.txt  package.xml
src/imav_gazebo/launch/: imav_world.launch  rotors_run.launch
src/imav_gazebo/models/custom/unit_box/: model.sdf
src/imav_gazebo/models/obstruction/: model.sdf
src/imav_gazebo/models/obstruction/meshes/: obstruction.stl
src/imav_gazebo/models/qr_plate_obstructed/: model.sdf
src/imav_gazebo/models/qr_plate_unobstructed/: model.sdf
src/imav_gazebo/models/rotating_plate_with_qr/: model.sdf
src/imav_gazebo/models/window/: model.config  model.sdf
src/landing/: CMakeLists.txt  package.xml
src/landing/params/: cam_params.txt
src/landing/src/: camera_read.py
src/lane_tracking/src/: calib.py  lane_traversal.py  main.py  pick_n_place_aruco.py  (+1 more)
src/rviz/: imav.rviz
src/util/: topic_lafda.py
(+424 files in other folders)
