<?xml version="1.0"?>
<package format="2">
  <name>imav_gazebo</name>
  <version>0.0.1</version>
  <description>IMAV 2023 Gazebo Package</description>
  <maintainer email="shriram@todo.todo">shriram</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xacro</build_depend>

  
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>xacro</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
    
</package>
